# ConsoleTemplate

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.cpp  resources.rc
src/modules/: application.cpp  application.h  configuration.cpp  configuration.h  connectionparams.cpp  connectionparams.h  definitions.h  logger.cpp  logger.h
